tests/compile_fail/bind_into_member_missing_output_parameter/main.cpp
#include "yorch/bind.hpp"

namespace {

struct worker {
    yorch::step_result run() noexcept {
        return yorch::step_result::success();
    }
};

} // namespace

int main() {
    auto task = yorch::bind_into_member<int>(
        &worker::run,
        yorch::value(worker {}));

    (void)task;
    return 0;
}
